--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -320,6 +320,13 @@ $header-height: 30px;
 			&:hover{
 				opacity: 1;
 			}
+            &.weibo{
+                background: image-url('social/weibo.png') center no-repeat #e32529;
+                border: 1px solid #e32529;
+                &:hover{
+                     border: 1px solid darken(#e32529, 10%);
+                }
+            }
 			&.email{
 				background: image-url('social/email.png') center no-repeat #050505;
 				border: 1px solid #050505;
@@ -355,6 +362,7 @@ $header-height: 30px;
 					border: 1px solid darken(rgb(175,182,202), 10%);
 				}
 			}
+
 			&.coderwall{
 				background: image-url('social/coderwall.png') center no-repeat #3E8DCC;
 				border: 1px solid #3E8DCC;
