--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -19,9 +19,18 @@ layout: default
 {% endif %}
 
 <!--添加多说评论-->
-{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
+{% if  page.comments == true %}
 <section>
-    <h1>Comments</h1>
-    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
+    {% include post/duoshuo.html %}
 </section>
 {% endif %}
+</div>
+{% unless page.sidebar == false %}
+<aside class="sidebar">
+    {% if site.page_asides.size %}
+    {% include_array page_asides %}
+    {% else %}
+    {% include_array default_asides %}
+    {% endif %}
+</aside>
+{% endunless %}
