--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -13,9 +13,22 @@ single: true
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
 </section>
 {% endif %}
-{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
+
+<!--多说评论-->
+</footer>
+</article>
+{% if page.comments == true %}
 <section>
-    <h1>Comments</h1>
-    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
+    {% include post/duoshuo.html %}
 </section>
 {% endif %}
+</div>
+{% unless page.sidebar == false %}
+<aside class="sidebar">
+    {% if site.post_asides.size %}
+    {% include_array post_asides %}
+    {% else %}
+    {% include_array default_asides %}
+    {% endif %}
+</aside>
+{% endunless %}
