Some comment here.

--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -1,5 +1,10 @@
 <div class="share">
 	<div class="addthis_toolbox addthis_default_style ">
+<!--   微博分享     -->
+    {% if site.weibo_share %}
+    {% include post/weibo.html %}
+    {% endif %}
+<!---->
 	{% if site.facebook_like %}
 	<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
 	{% endif %}
