--- a/source/_includes/post/duoshuo.html
+++ b/source/_includes/post/duoshuo.html
@@ -1,17 +1,32 @@
 <!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="{{site.url}}{{ page.url  }}"></div>
+<!--<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="{{site.url}}{{ page.url  }}"></div>-->
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<!--<script type="text/javascript">-->
+<!--    var duoshuoQuery = {short_name:"9738395"};-->
+<!--    (function() {-->
+<!--     -->
+<!--     var ds = document.createElement('script');-->
+<!--     ds.type = 'text/javascript';ds.async = true;-->
+<!--     ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';-->
+<!--     ds.charset = 'UTF-8';-->
+<!--     (document.getElementsByTagName('head')[0]-->
+<!--      || document.getElementsByTagName('body')[0]).appendChild(ds);-->
+<!--     })();-->
+<!--    </script>-->
+<!-- 多说公共JS代码 end -->
+
+<!-- Duoshuo Comment BEGIN -->
+<div class="ds-thread"></div>
 <script type="text/javascript">
-    var duoshuoQuery = {short_name:"9738395"};
+    var duoshuoQuery = {short_name:"jixuqianxing"};
     (function() {
-     
      var ds = document.createElement('script');
      ds.type = 'text/javascript';ds.async = true;
-     ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+     ds.src = 'http://static.duoshuo.com/embed.js';
      ds.charset = 'UTF-8';
      (document.getElementsByTagName('head')[0]
       || document.getElementsByTagName('body')[0]).appendChild(ds);
      })();
     </script>
-<!-- 多说公共JS代码 end -->
+<!-- Duoshuo Comment END -->
