--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -18,19 +18,10 @@ layout: default
 </section>
 {% endif %}
 
-<!--添加多说评论-->
-{% if  page.comments == true %}
+<!--多说评论-->
+{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
 <section>
-    {% include post/duoshuo.html %}
+    <h1>Comments</h1>
+    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
 </section>
 {% endif %}
-</div>
-{% unless page.sidebar == false %}
-<aside class="sidebar">
-    {% if site.page_asides.size %}
-    {% include_array page_asides %}
-    {% else %}
-    {% include_array default_asides %}
-    {% endif %}
-</aside>
-{% endunless %}
