--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -15,20 +15,9 @@ single: true
 {% endif %}
 
 <!--多说评论-->
-</footer>
-</article>
-{% if page.comments == true %}
+{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
 <section>
-    {% include post/duoshuo.html %}
+    <h1>Comments</h1>
+    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
 </section>
 {% endif %}
-</div>
-{% unless page.sidebar == false %}
-<aside class="sidebar">
-    {% if site.post_asides.size %}
-    {% include_array post_asides %}
-    {% else %}
-    {% include_array default_asides %}
-    {% endif %}
-</aside>
-{% endunless %}
