--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main">
-    <li><a href="{{ root_url }}/">文章</a></li>
-    <li><a href="http://about.me/shashankmehta">关于我</a></li>
-    <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+    <li><a href="{{ root_url }}/">首页</a></li>
+    <li><a href="{{ root_url }}/blog/archives">文章列表</a></li>
+    <li><a href="http://www.weibo.com/2410259360">关于我</a></li>
 </ul>
