--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,8 +1,8 @@
 {% include custom/navigation.html %}
-{% if site.description %}
-<section class="aboutme">
-  <p>
-    {{ site.description }}
-  </p>
-</section>
-{% endif %}
+<!--{% if site.description %}-->
+<!--<section class="aboutme">-->
+<!--  <p>-->
+<!--    {{ site.description }}-->
+<!--  </p>-->
+<!--</section>-->
+<!--{% endif %}-->
