--- a/source/_includes/post/weibo.html
+++ b/source/_includes/post/weibo.html
@@ -13,6 +13,11 @@
 
 
 <!-- UY BEGIN -->
+<!--<div id="uyan_frame"></div>-->
+<!--<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>-->
+<!-- UY END -->
+
+<!-- UY BEGIN -->
 <div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1988709"></script>
 <!-- UY END -->
