--- a/source/_includes/post/weibo.html
+++ b/source/_includes/post/weibo.html
@@ -1,8 +1,16 @@
+<!--友信评论-->
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1988709"></script>
+<!-- UY END -->
+
+
+<!--分享按钮-->
 <!-- JiaThis Button BEGIN -->
 <div class="jiathis_style_24x24">
     <a class="jiathis_button_qzone"></a>
     <a class="jiathis_button_tsina"></a>
-    <a class="jiathis_button_tqq"></a>
+<!--    <a class="jiathis_button_tqq"></a>-->
     <a class="jiathis_button_weixin"></a>
     <a class="jiathis_button_renren"></a>
     <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
@@ -12,12 +20,3 @@
 <!-- JiaThis Button END -->
 
 
-<!-- UY BEGIN -->
-<!--<div id="uyan_frame"></div>-->
-<!--<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>-->
-<!-- UY END -->
-
-<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1988709"></script>
-<!-- UY END -->
